crates/alder-parse/src/snapshots/alder_parse__template__tests__dollar_without_brace.snap
---
source: crates/alder-parse/src/template.rs
description: "`cost: $5`"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 11,
        },
    },
    value: Template(
        [
            Text(
                "cost: $5",
            ),
        ],
    ),
}
