crates/alder-parse/src/snapshots/alder_parse__template__tests__empty.snap
---
source: crates/alder-parse/src/template.rs
description: "``"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 3,
        },
    },
    value: Template(
        [],
    ),
}
