crates/alder-parse/src/snapshots/alder_parse__template__tests__error_endless.snap
---
source: crates/alder-parse/src/template.rs
description: "`abc"
---
Template(
    Endless(
        1,
        1,
    ),
    1,
    1,
)
