crates/alder-parse/src/snapshots/alder_parse__template__tests__error_hole_bad_expr.snap
---
source: crates/alder-parse/src/template.rs
description: "`a ${ ) } b`"
---
Template(
    HoleExpr(
        Start(
            1,
            7,
        ),
        1,
        7,
    ),
    1,
    1,
)
