crates/alder-parse/src/snapshots/alder_parse__template__tests__error_hole_empty.snap
---
source: crates/alder-parse/src/template.rs
description: "`a ${ } b`"
---
Template(
    HoleEmpty(
        1,
        7,
    ),
    1,
    1,
)
