crates/alder-parse/src/snapshots/alder_parse__template__tests__error_hole_unclosed.snap
---
source: crates/alder-parse/src/template.rs
description: "`a ${ x `"
---
Template(
    HoleEnd(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 5,
            },
            boundary: Position {
                line: 1,
                column: 8,
            },
            unexpected: Position {
                line: 1,
                column: 9,
            },
        },
    ),
    1,
    1,
)
