crates/alder-parse/src/snapshots/alder_parse__template__tests__escaped_backtick.snap
---
source: crates/alder-parse/src/template.rs
description: "`a \\` b`"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 9,
        },
    },
    value: Template(
        [
            Text(
                "a ` b",
            ),
        ],
    ),
}
