crates/alder-parse/src/snapshots/alder_parse__template__tests__escaped_dollar.snap
---
source: crates/alder-parse/src/template.rs
description: "`cost: \\${x}`"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 14,
        },
    },
    value: Template(
        [
            Text(
                "cost: ${x}",
            ),
        ],
    ),
}
