crates/alder-parse/src/snapshots/alder_parse__template__tests__hole_at_end.snap
---
source: crates/alder-parse/src/template.rs
description: "`/users/${id}`"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 15,
        },
    },
    value: Template(
        [
            Text(
                "/users/",
            ),
            Expr(
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 11,
                        },
                        end: Position {
                            line: 1,
                            column: 13,
                        },
                    },
                    value: Var(
                        "id",
                    ),
                },
            ),
        ],
    ),
}
